<resources>
    <string name="app_name">MyContacts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="change_password">change password</string>
    <string name="password">password</string>
    <string name="new_password">new password</string>
    <string name="new_password_confirm">new password confirm</string>
    <string name="change">Change</string>
    <string name="save">save</string>
    <string name="email">email</string>
    <string name="number">number</string>
    <string name="password_confirm">password confirm</string>
    <string name="login">Login</string>
    <string name="add_new_contact">add new contact</string>
    <string name="name">name</string>
    <string name="empty" > </string>
    <string name="name_empty">name field is empty !</string>
    <string name="number_empty">number field is empty !</string>
    <string name="contact_exists">contact already exists !</string>
    <string name="contact_edited">contact details edited</string>
    <string name="error_loading_image">Error Loading image</string>
    <string name="contact_deletion">delete contact ?</string>
    <string name="add_favorite">add to favorites</string>
    <string name="remove_favorite">remove from favorites</string>
    <string name="set_password">set password</string>
    <string name="what">!</string>
    <string name="pass_changed">password changed</string>
    <string name="pass_incorrect">password is incorrect !</string>
    <string name="new_pass_empty">new password is empty !</string>
    <string name="new_pass_confirm_match">new password and confirm does not match !</string>
    <string name="pass_set_ask">Do you want to set a password ?</string>
    <string name="enter_pass">enter password</string>
    <string name="pass_empty">password is empty !</string>
    <string name="pass_confirm_match">password and confirm does not match !</string>
    <string name="selected">selected</string>
    <string name="loading_contacts">loading contacts ...</string>
    <string name="copy_clipboard">copied in clipboard</string>
    <string name="pass_set">set password</string>
    <string name="set">set</string>
</resources>
