<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.mycontacts.activities.LoginActivity">


    <TextView
        android:id="@+id/tv_setPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margin_top_2"
        android:layout_marginLeft="@dimen/et_margin_top_2"
        android:layout_marginBottom="@dimen/tv_margin_bottom"
        android:text="@string/set_password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/setPassword_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margin_by"
        android:layout_marginTop="@dimen/et_margin_top"
        android:layout_marginEnd="@dimen/et_margin_by"
        android:layout_marginRight="@dimen/et_margin_by"
        app:layout_constraintTop_toBottomOf="@+id/tv_setPassword"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_setPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="20"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordConfirm_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margin_by"
        android:layout_marginTop="@dimen/et_margin_top"
        android:layout_marginEnd="@dimen/et_margin_by"
        android:layout_marginRight="@dimen/et_margin_by"
        app:layout_constraintTop_toBottomOf="@+id/setPassword_lay"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="20"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/b_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margin_by"
        android:layout_marginEnd="@dimen/et_margin_by"
        android:layout_marginRight="@dimen/et_margin_by"
        android:layout_marginBottom="@dimen/et_margin_by"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>