<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margin_top"
        android:layout_marginLeft="@dimen/et_margin_top"
        android:layout_marginTop="@dimen/et_margin_top"
        android:layout_marginEnd="@dimen/et_margin_top"
        android:layout_marginRight="@dimen/et_margin_top"
        android:ems="20"
        android:gravity="left"
        android:hint="@string/name"
        android:maxLines="1"
        android:textColor="@color/text_color"
        android:textSize="@dimen/tv_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margin_top"
        android:layout_marginLeft="@dimen/et_margin_top"
        android:layout_marginTop="@dimen/et_margin_top"
        android:layout_marginEnd="@dimen/et_margin_top"
        android:layout_marginRight="@dimen/et_margin_top"
        android:ems="20"
        android:gravity="left"
        android:hint="@string/number"
        android:maxLines="1"
        android:textColor="@color/text_color"
        android:textSize="@dimen/tv_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margin_top"
        android:layout_marginLeft="@dimen/et_margin_top"
        android:layout_marginTop="@dimen/et_margin_top"
        android:layout_marginEnd="@dimen/et_margin_top"
        android:layout_marginRight="@dimen/et_margin_top"
        android:ems="20"
        android:gravity="left"
        android:hint="@string/email"
        android:maxLines="1"
        android:textColor="@color/text_color"
        android:textSize="@dimen/tv_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_number" />

</android.support.constraint.ConstraintLayout>